# Dual-Syringe-pump-version-1

./: .gitignore  CMakeLists.txt  Noi_day.txt  README.md  flash_esp32.bat  plotter.py  sdkconfig  sdkconfig.old
components/app/: CMakeLists.txt  Readme.md
components/app/pump_channel/: pump_channel.c  pump_channel.h
components/app/pump_manager/: pump_manager.c  pump_manager.h
components/app/unit_converter/: unit_converter.c  unit_converter.h
components/domain/: CMakeLists.txt  Readme.md  domain.c  domain.h
components/drivers/: CMakeLists.txt  Readme.md  idf_component.yml  io_config.h
components/drivers/as5600/: as5600.c  as5600.h
components/drivers/button/: button.c  button.h
components/drivers/pcf8574/: pcf8574.c  pcf8574.h
components/drivers/tft/: tft.c  tft.h
components/drivers/tmc2209/: tmc2209.c  tmc2209.h
components/motion/: CMakeLists.txt  Readme.md
components/motion/PID/: pid.c  pid.h
components/motion/trapezoidal_profile/: trapezoidal_profile.c  trapezoidal_profile.h
components/services/: CMakeLists.txt  Readme.md
components/services/mqtt/: mqtt.c  mqtt.h
main/: CMakeLists.txt  main.c  sequence_diagram.md
